src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__sizeof_works_in_binary_expression_with_different_size.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %i = alloca i32, align [filtered]
  %j = alloca i16, align [filtered]
  %arr_ptr = alloca [3 x float]*, align [filtered]
  store i32 0, i32* %i, align [filtered]
  store i16 0, i16* %j, align [filtered]
  store [3 x float]* null, [3 x float]** %arr_ptr, align [filtered]
  store i32 0, i32* %main, align [filtered]
  %load_j = load i16, i16* %j, align [filtered]
  %0 = zext i16 %load_j to i64
  %tmpVar = sub i64 %0, ptrtoint ([3 x float]** getelementptr ([3 x float]*, [3 x float]** null, i32 1) to i64)
  %1 = trunc i64 %tmpVar to i32
  store i32 %1, i32* %i, align [filtered]
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}
