src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__structs_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%MyStruct = type { i32, i16 }
%__global_y = type { i8, i8 }

@x = global %MyStruct zeroinitializer
@y = global %__global_y zeroinitializer
@__MyStruct__init = unnamed_addr constant %MyStruct zeroinitializer
@____global_y__init = unnamed_addr constant %__global_y zeroinitializer

