src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__structs_members_can_be_referenced.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%MainProg = type { %MyStruct }
%MyStruct = type { i32, i32 }

@MainProg_instance = global %MainProg zeroinitializer
@__MyStruct__init = unnamed_addr constant %MyStruct zeroinitializer

define void @MainProg(%MainProg* %0) {
entry:
  %Cord = getelementptr inbounds %MainProg, %MainProg* %0, i32 0, i32 0
  %a = getelementptr inbounds %MyStruct, %MyStruct* %Cord, i32 0, i32 0
  store i32 0, i32* %a, align [filtered]
  ret void
}
