src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__sub_range_check_functions.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i8, i8, i8, i16, i16, i16, i32, i32, i64, i64 }

@main_instance = global %main zeroinitializer

define i32 @CheckRangeSigned(i32 %0, i32 %1, i32 %2) {
entry:
  %CheckRangeSigned = alloca i32, align [filtered]
  %v = alloca i32, align [filtered]
  store i32 %0, i32* %v, align [filtered]
  %low = alloca i32, align [filtered]
  store i32 %1, i32* %low, align [filtered]
  %up = alloca i32, align [filtered]
  store i32 %2, i32* %up, align [filtered]
  store i32 0, i32* %CheckRangeSigned, align [filtered]
  store i32 -7, i32* %CheckRangeSigned, align [filtered]
  %CheckRangeSigned_ret = load i32, i32* %CheckRangeSigned, align [filtered]
  ret i32 %CheckRangeSigned_ret
}

define i32 @CheckRangeUnsigned(i32 %0, i32 %1, i32 %2) {
entry:
  %CheckRangeUnsigned = alloca i32, align [filtered]
  %v = alloca i32, align [filtered]
  store i32 %0, i32* %v, align [filtered]
  %low = alloca i32, align [filtered]
  store i32 %1, i32* %low, align [filtered]
  %up = alloca i32, align [filtered]
  store i32 %2, i32* %up, align [filtered]
  store i32 0, i32* %CheckRangeUnsigned, align [filtered]
  store i32 7, i32* %CheckRangeUnsigned, align [filtered]
  %CheckRangeUnsigned_ret = load i32, i32* %CheckRangeUnsigned, align [filtered]
  ret i32 %CheckRangeUnsigned_ret
}

define i64 @CheckLRangeSigned(i64 %0, i64 %1, i64 %2) {
entry:
  %CheckLRangeSigned = alloca i64, align [filtered]
  %v = alloca i64, align [filtered]
  store i64 %0, i64* %v, align [filtered]
  %low = alloca i64, align [filtered]
  store i64 %1, i64* %low, align [filtered]
  %up = alloca i64, align [filtered]
  store i64 %2, i64* %up, align [filtered]
  store i64 0, i64* %CheckLRangeSigned, align [filtered]
  store i64 -77, i64* %CheckLRangeSigned, align [filtered]
  %CheckLRangeSigned_ret = load i64, i64* %CheckLRangeSigned, align [filtered]
  ret i64 %CheckLRangeSigned_ret
}

define i64 @CheckLRangeUnsigned(i64 %0, i64 %1, i64 %2) {
entry:
  %CheckLRangeUnsigned = alloca i64, align [filtered]
  %v = alloca i64, align [filtered]
  store i64 %0, i64* %v, align [filtered]
  %low = alloca i64, align [filtered]
  store i64 %1, i64* %low, align [filtered]
  %up = alloca i64, align [filtered]
  store i64 %2, i64* %up, align [filtered]
  store i64 0, i64* %CheckLRangeUnsigned, align [filtered]
  store i64 77, i64* %CheckLRangeUnsigned, align [filtered]
  %CheckLRangeUnsigned_ret = load i64, i64* %CheckLRangeUnsigned, align [filtered]
  ret i64 %CheckLRangeUnsigned_ret
}

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %b = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %c = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %d = getelementptr inbounds %main, %main* %0, i32 0, i32 3
  %e = getelementptr inbounds %main, %main* %0, i32 0, i32 4
  %f = getelementptr inbounds %main, %main* %0, i32 0, i32 5
  %g = getelementptr inbounds %main, %main* %0, i32 0, i32 6
  %h = getelementptr inbounds %main, %main* %0, i32 0, i32 7
  %i = getelementptr inbounds %main, %main* %0, i32 0, i32 8
  %j = getelementptr inbounds %main, %main* %0, i32 0, i32 9
  %call = call i32 @CheckRangeUnsigned(i32 1, i32 0, i32 100)
  %1 = trunc i32 %call to i8
  store i8 %1, i8* %a, align [filtered]
  %call1 = call i32 @CheckRangeSigned(i32 1, i32 -100, i32 100)
  %2 = trunc i32 %call1 to i8
  store i8 %2, i8* %b, align [filtered]
  %call2 = call i32 @CheckRangeUnsigned(i32 1, i32 0, i32 100)
  %3 = trunc i32 %call2 to i8
  store i8 %3, i8* %c, align [filtered]
  %call3 = call i32 @CheckRangeUnsigned(i32 1, i32 0, i32 100)
  %4 = trunc i32 %call3 to i16
  store i16 %4, i16* %d, align [filtered]
  %call4 = call i32 @CheckRangeSigned(i32 1, i32 -100, i32 100)
  %5 = trunc i32 %call4 to i16
  store i16 %5, i16* %e, align [filtered]
  %call5 = call i32 @CheckRangeUnsigned(i32 1, i32 0, i32 100)
  %6 = trunc i32 %call5 to i16
  store i16 %6, i16* %f, align [filtered]
  %call6 = call i32 @CheckRangeSigned(i32 1, i32 -100, i32 100)
  store i32 %call6, i32* %g, align [filtered]
  %call7 = call i32 @CheckRangeUnsigned(i32 1, i32 0, i32 100)
  store i32 %call7, i32* %h, align [filtered]
  %call8 = call i64 @CheckLRangeSigned(i64 1, i64 -100, i64 100)
  store i64 %call8, i64* %i, align [filtered]
  %call9 = call i64 @CheckLRangeUnsigned(i64 1, i64 0, i64 100)
  store i64 %call9, i64* %j, align [filtered]
  ret void
}
