src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__sub_range_type_calls_check_function_missing.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Main = type { i16 }

@Main_instance = global %Main zeroinitializer

define signext i16 @Check_XX_RangeSigned(i16 signext %0, i16 signext %1, i16 signext %2) {
entry:
  %Check_XX_RangeSigned = alloca i16, align [filtered]
  %value = alloca i16, align [filtered]
  store i16 %0, ptr %value, align [filtered]
  %lower = alloca i16, align [filtered]
  store i16 %1, ptr %lower, align [filtered]
  %upper = alloca i16, align [filtered]
  store i16 %2, ptr %upper, align [filtered]
  store i16 0, ptr %Check_XX_RangeSigned, align [filtered]
  %load_value = load i16, ptr %value, align [filtered]
  store i16 %load_value, ptr %Check_XX_RangeSigned, align [filtered]
  %Check_XX_RangeSigned_ret = load i16, ptr %Check_XX_RangeSigned, align [filtered]
  ret i16 %Check_XX_RangeSigned_ret
}

define void @Main(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %Main, ptr %0, i32 0, i32 0
  store i16 7, ptr %x, align [filtered]
  ret void
}
