src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__sub_range_type_calls_check_function_on_assigment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Main = type { i16 }

@Main_instance = global %Main zeroinitializer

define signext i16 @CheckRangeSigned(i16 signext %0, i16 signext %1, i16 signext %2) {
entry:
  %CheckRangeSigned = alloca i16, align [filtered]
  %value = alloca i16, align [filtered]
  store i16 %0, ptr %value, align [filtered]
  %lower = alloca i16, align [filtered]
  store i16 %1, ptr %lower, align [filtered]
  %upper = alloca i16, align [filtered]
  store i16 %2, ptr %upper, align [filtered]
  store i16 0, ptr %CheckRangeSigned, align [filtered]
  %load_value = load i16, ptr %value, align [filtered]
  store i16 %load_value, ptr %CheckRangeSigned, align [filtered]
  %CheckRangeSigned_ret = load i16, ptr %CheckRangeSigned, align [filtered]
  ret i16 %CheckRangeSigned_ret
}

define void @Main(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %Main, ptr %0, i32 0, i32 0
  %call = call signext i16 @CheckRangeSigned(i16 signext 7, i16 signext 0, i16 signext 100)
  store i16 %call, ptr %x, align [filtered]
  ret void
}
