src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__test.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

%cls = type { i16, i16 }
%__fat_pointer_to_cls = type { %cls*, [1 x i64]* }
%cls.MyMethod = type {}

@__cls__init = unnamed_addr constant %cls zeroinitializer
@____fat_pointer_to_cls__init = unnamed_addr constant %__fat_pointer_to_cls zeroinitializer

define void @cls(%cls* %0) {
entry:
  %x = getelementptr inbounds %cls, %cls* %0, i32 0, i32 0
  %y = getelementptr inbounds %cls, %cls* %0, i32 0, i32 1
  ret void
}

define void @cls.MyMethod(%cls* %0, %cls.MyMethod* %1) {
entry:
  %x = getelementptr inbounds %cls, %cls* %0, i32 0, i32 0
  %y = getelementptr inbounds %cls, %cls* %0, i32 0, i32 1
  ret void
}

