src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__time_variables_have_nano_seconds_resolution.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %y = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  store i32 1, ptr %y, align [filtered]
  store i32 0, ptr %y, align [filtered]
  store i32 0, ptr %y, align [filtered]
  store i32 50065409, ptr %y, align [filtered]
  ret void
}
