src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__typed_enums_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

@x = global i8 0
@y = global i16 0
@z = global i32 0
@red = unnamed_addr constant i8 0
@yellow = unnamed_addr constant i8 1
@green = unnamed_addr constant i8 2
@red.1 = unnamed_addr constant i16 0
@yellow.2 = unnamed_addr constant i16 1
@green.3 = unnamed_addr constant i16 2
@red.4 = unnamed_addr constant i32 0
@yellow.5 = unnamed_addr constant i32 1
@green.6 = unnamed_addr constant i32 2

