src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__typed_enums_are_used_properly.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i16, i32 }

@prg_instance = global %prg zeroinitializer
@MyEnum.red = unnamed_addr constant i8 5
@MyEnum.yellow = unnamed_addr constant i8 6
@MyEnum.green = unnamed_addr constant i8 7
@MyEnum2.red = unnamed_addr constant i16 15
@MyEnum2.yellow = unnamed_addr constant i16 16
@MyEnum2.green = unnamed_addr constant i16 17
@MyEnum3.red = unnamed_addr constant i32 25
@MyEnum3.yellow = unnamed_addr constant i32 26
@MyEnum3.green = unnamed_addr constant i32 27

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  store i8 6, i8* %x, align [filtered]
  store i16 16, i16* %y, align [filtered]
  store i32 26, i32* %z, align [filtered]
  ret void
}
